--- a/cv1.html
+++ b/cv1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cv - Trabajo Final</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> <!--COMPLETAR ESTO-->
-    <link rel="stylesheet" href="trabajoFinal/cv.css">
+    <link rel="stylesheet" href="https://github.com/cvlionelscaloni/cvlionelscaloni.github.io/blob/main/cv.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="preconnect" href="https://fonts.googleapis.com">
