--- a/cv1.html
+++ b/cv1.html
@@ -16,7 +16,7 @@
 <body>
     <header id="h-principal"; class="col-12">  
         <h1 id = "h1-header1">CV Lionel Scaloni </h1>
-        <img id="fotolio"; src="LioScaloni.png" alt="Lionel Scaloni"/>
+        <img id="fotolio"; src="https://github.com/cvlionelscaloni/cvlionelscaloni.github.io/blob/main/LioScaloni.png" alt="Lionel Scaloni"/>
     
     </header>
     
