--- a/cv1.html
+++ b/cv1.html
@@ -156,7 +156,7 @@
         <button onclick="topFunction()" id="button-foot" title="Go to top">Volver a inicio</button>
     </footer>
     
-    <script src="trabajoFinal/cv.js"></script>
+    <script src="https://github.com/cvlionelscaloni/cvlionelscaloni.github.io/blob/main/cv.js"></script>
     
 </body>
 </html>
